--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,16 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <style>
+      .backg {
+        height: 90vh;
+        color: #fff;
+        background: linear-gradient(-45deg, #23A6D5, #23D5AB);
+      }
+    </style>
+    <title>Products App</title>
   </head>
-  <body>
+  <body class="backg">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
